[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies.codec]
package = "parity-scale-codec"
version = "3.1.2"
default-features = false
features = ["derive", "full"]

[dependencies.colored]
version = "2.0.0"

[dependencies.hex]
version = "0.4.3"

[dependencies.scale-info]
version = "2.1.1"
default-features = false
features = ["derive", "serde"]

[dependencies.serde_json]
version = "1.0.82"
